--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ install:
 - pip install coveralls
 script:
 - coverage run --source=vpc_subnet_calculator -m unittest discover
-- flake8 --exclude .git,*.pyc
+- flake8 --exclude .git,*.pyc,env,test*
 after_success:
 - coveralls
